tests/baselines/reference/typeParameterUsedAsConstraint.errors.txt
==== tests/cases/compiler/typeParameterUsedAsConstraint.ts (40 errors) ====
    class C<T, U extends T> { }
               ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(1,12): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    class C2<T extends U, U> { }
             ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(2,10): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    class C3<T extends Date, U extends T> { }
                             ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(3,26): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    class C4<T extends U, U extends Date> { }
             ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(4,10): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    class C5<T extends U, U extends V, V> { }
             ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(5,10): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                          ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(5,23): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    class C6<T, U extends T, V extends U> { }
                ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(6,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                             ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(6,26): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    
    interface I<T, U extends T> { }
                   ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(8,16): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    interface I2<T extends U, U> { }
                 ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(9,14): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    interface I3<T extends Date, U extends T> { }
                                 ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(10,30): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    interface I4<T extends U, U extends Date> { }
                 ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(11,14): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    interface I5<T extends U, U extends V, V> { }
                 ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(12,14): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                              ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(12,27): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    interface I6<T, U extends T, V extends U> { }
                    ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(13,17): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                 ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(13,30): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    
    function f<T, U extends T>() { }
                  ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(15,15): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    function f2<T extends U, U>() { }
                ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(16,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    function f3<T extends Date, U extends T>() { }
                                ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(17,29): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    function f4<T extends U, U extends Date>() { }
                ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(18,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    function f5<T extends U, U extends V, V>() { }
                ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(19,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                             ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(19,26): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    function f6<T, U extends T, V extends U>() { }
                   ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(20,16): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(20,29): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    
    var e = <T, U extends T>() => { }
                ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(22,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var e2 = <T extends U, U>() => { }
              ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(23,11): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var e3 = <T extends Date, U extends T>() => { }
                              ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(24,27): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var e4 = <T extends U, U extends Date>() => { }
              ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(25,11): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var e5 = <T extends U, U extends V, V>() => { }
              ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(26,11): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                           ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(26,24): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var e6 = <T, U extends T, V extends U>() => { }
                 ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(27,14): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                              ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(27,27): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    
    var a: { <T, U extends T>(): void }
                 ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(29,14): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var a2: { <T extends U, U>(): void }
               ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(30,12): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var a3: { <T extends Date, U extends T>(): void }
                               ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(31,28): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var a4: { <T extends U, U extends Date>(): void }
               ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(32,12): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var a5: { <T extends U, U extends V, V>(): void }
               ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(33,12): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                            ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(33,25): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var a6: { <T, U extends T, V extends U>(): void }
                  ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(34,15): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                               ~~~~~~~~~~~
!!! typeParameterUsedAsConstraint.ts(34,28): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    